name:                HackAsm
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/githubuser/HackAsm#readme
license:             BSD3
license-file:        LICENSE
author:              Peter Berger
maintainer:          peterb@gmail.com
copyright:           2019 Peter Berger
category:            Web
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

executable HackAsm
  hs-source-dirs:      src
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5, megaparsec, text
  other-modules:       HackParse, HackCode
